--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,7 +5,9 @@
   @include flex(row, space-between, center);
   max-width: 1440px;
   width: 100%;
-  margin: 24px auto;
+  margin: 0 auto;
+  padding: 24px 0;
+  border-bottom: 1px solid rgb(95,79,100, .3);
 }
 
 .logoBlock {
