--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -29,7 +29,7 @@
   padding: 12px 16px;
   border-radius: 4px;
   outline: 0;
-  border: 0;
+  border: none;
   resize: none;
   overflow: hidden;
 }
