feat: footer, pagination, pagination-item, referral, referral-codes, reports, report, empty, statistics, wallet, formReferral, image components

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -34,7 +34,8 @@
 }
 
 .link {
-  @include font('Red Hat Display', $xxs-font-size, $regular, $l-line-height, $color: $black);
+  @include font('Red Hat Display', $xxs-font-size, $regular, $l-line-height);
+  color: $black;
   text-decoration: none;
   border-bottom: 1px solid $black;
 
