--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -24,7 +24,8 @@
 }
 
 .input {
-  @include font('Red Hat Display', $xxs-font-size, $bold, $l-line-height, inherit, $violet);
+  @include font('Red Hat Display', $xxs-font-size, $bold, $l-line-height, inherit);
+  color: $violet;
   width: 147px;
   padding: 12px 16px;
   border-radius: 4px;
