--- a/src/components/ui/forms/formFooter/formFooter.module.scss
+++ b/src/components/ui/forms/formFooter/formFooter.module.scss
@@ -1,5 +1,5 @@
-@use '../../../stylesheets/variables.scss' as *;
-@use '../../../stylesheets/mixins' as *;
+@use '../../../../stylesheets/variables.scss' as *;
+@use '../../../../stylesheets/mixins' as *;
 
 .form {
   @include flex(column, center, flex-start, 20px);
@@ -12,7 +12,8 @@
 }
 
 .input {
-  @include font('Red Hat Display', $xxxs-font-size, $medium, $l-line-height, $color: $gray);
+  @include font('Red Hat Display', $xxxs-font-size, $medium, $l-line-height);
+  color: $gray;
   width: 539px;
   padding: 0 0 6px;
   margin: 0;
@@ -51,5 +52,6 @@
 }
 
 .titleButton {
-  @include font('Syncopate', $xs-font-size, $bold, $m-line-height, $xs-letter-space, $white);
+  @include font('Syncopate', $xs-font-size, $bold, $m-line-height, $xs-letter-space);
+  color: $white;
 }
