--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -57,3 +57,20 @@
   border-radius: 4px;
   background: $white;
 }
+
+.dropdown {
+  background: rgb(238,238,238, .3);
+  border-radius: 2px;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  z-index: 2;
+
+  &__more {
+    width: 68px;
+  }
+
+  &__languages {
+    width: 68px;
+  }
+}
