--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -2,11 +2,20 @@
 @use '../../stylesheets/mixins' as *;
 
 .footer {
-  @include flex(row, space-between, flex-start);
-  padding: 100px 240px 38px;
+  @include flex();
+  max-width: 1920px;
+  width: 100%;
+  padding-top: 100px;
   background: $white;
   border-top-right-radius: 28px;
   border-top-left-radius: 28px;
+}
+
+.wrapper {
+  @include flex(row, space-between, flex-start);
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .information {
@@ -23,12 +32,14 @@
 
 .formBlock {
   @include flex(column, center, flex-start);
-  width: 539px;
+  max-width: 539px;
+  width: 100%;
 }
 
 .formLinks {
   @include flex(row, space-between, flex-start);
-  width: 539px;
+  max-width: 539px;
+  width: 100%;
   padding: 120px 0 38px;
 
 }
