--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -2,46 +2,157 @@
 @use '../../stylesheets/mixins' as *;
 
 .footer {
-  @include flex();
+  @include flex(row, center, center);
   max-width: 1920px;
-  width: 100%;
-  padding-top: 100px;
+  padding: 100px 0 40px;
   background: $white;
   border-top-right-radius: 28px;
   border-top-left-radius: 28px;
+
+  @media (max-width: 900px) {
+    padding: 24px 16px;
+    align-items: flex-start;
+  }
 }
 
 .wrapper {
   @include flex(row, space-between, flex-start);
   max-width: 1440px;
   width: 100%;
-  margin: 0 auto;
+  position: relative;
+
+  @media (max-width: 1480px) {
+    max-width: 1200px;
+  }
+
+  @media (max-width: 1260px) {
+    max-width: 1100px;
+  }
+
+  @media (max-width: 1160px) {
+    max-width: 850px;
+  }
+
+  @media (max-width: 900px) {
+    @include flex(column, center, center, 24px);
+  }
 }
 
 .information {
-  @include flex(column, space-between, flex-start, 287px);
+  height: 571px;
+  @include flex(column, space-between, flex-start);
+
+  @media (max-width: 900px) {
+    height: auto;
+    gap: 24px;
+  }
+
+  @media (max-width: 525px) {
+    max-width: 320px;
+  }
 }
 
 .basic {
   @include flex(row, center, flex-start, 114px);
+
+  @media (max-width: 1480px) {
+    gap: 40px;
+  }
+
+  @media (max-width: 1160px) {
+    gap: 15px;
+  }
+
+  @media (max-width: 900px) {
+    justify-content: space-between;
+    gap: 64px;
+    max-width: 496px;
+  }
+
+  @media (max-width: 525px) {
+    max-width: 320px;
+    gap: 10px;
+  }
 }
 
 .secondary {
   @include flex(row, center, flex-start, 88px);
+
+  @media (max-width: 900px) {
+    gap: 70px;
+  }
+
+  @media (max-width: 525px) {
+    gap: 0;
+  }
+
+  &_information {
+    @media (max-width: 900px) {
+      width: 169px;
+    }
+
+    @media (max-width: 525px) {
+      width: 136px;
+      font-size: 12px;
+      text-align: left;
+    }
+  }
+
 }
 
 .formBlock {
-  @include flex(column, center, flex-start);
+  @include flex(column, space-between, flex-start);
+  height: 571px;
   max-width: 539px;
   width: 100%;
+
+  @media (max-width: 1260px) {
+    max-width: 439px;
+  }
+
+  @media (max-width: 1160px) {
+    max-width: 496px;
+  }
+
+  @media (max-width: 900px) {
+    max-width: 850px;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+  }
+
+  @media (max-width: 525px) {
+    max-width: 320px;
+  }
+}
+
+.footerInformation {
+  @media (max-width: 900px) {
+    @include flex(column, $gap: 8px);
+  }
+
+  @media (max-width: 525px) {
+    max-width: 320px;
+  }
 }
 
 .formLinks {
   @include flex(row, space-between, flex-start);
   max-width: 539px;
   width: 100%;
-  padding: 120px 0 38px;
+  padding-top: 120px;
 
+  @media (max-width: 900px) {
+    justify-content: flex-start;
+    padding: 0;
+    gap: 131px;
+  }
+
+  @media (max-width: 525px) {
+    gap: 29px;
+  }
 }
 
 .link {
@@ -54,5 +165,14 @@
     cursor: $cursor;
     color: $gray;
     border-bottom: 1px solid $gray;
+  }
+
+  @media (max-width: 900px) {
+    width: 109px;
+    text-align: left;
+  }
+
+  @media (max-width: 525px) {
+    font-size: 12px;
   }
 }
