--- a/src/components/ui/checkbox/checkbox.module.scss
+++ b/src/components/ui/checkbox/checkbox.module.scss
@@ -41,14 +41,41 @@
     opacity: 0;
     transition: width .3s, height .3s, opacity .3s;
   }
+
+  @media (max-width: 525px) {
+    @include size(20px, 20px);
+    border: 1px solid $black;
+    border-radius: 4px;
+
+    &::after {
+      content: '';
+      position: absolute;
+      right: 5px;
+      bottom: 5px;
+      @include size(0, 0);
+      border: solid $black;
+      border-width: 0 2px 2px 0;
+      transform: rotate(45deg);
+      opacity: 0;
+      transition: width .3s, height .3s, opacity .3s;
+    }
+  }
 }
 
 .customСheckboxDone:checked + .cust::after {
   @include size(7px, 15px);
   opacity: 1;
+
+  @media (max-width: 525px) {
+    @include size(5px, 10px);
+  }
 }
 
 .customСheckboxDone:checked + .cust {
   border: 3px solid $black;
   background-color: $white;
+
+  @media (max-width: 525px) {
+    border: 1px solid $black;
+  }
 }
