feat: logic sidebar & adptiv footer, sidebar

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,6 +1,6 @@
 @use '../../stylesheets/variables.scss' as *;
 @use '../../stylesheets/mixins' as *;
 
-.wrapper {
+.wrapperLayout {
   @include flex(row, $gap: 30px)
 }
