--- a/src/components/layout/headerLayout/headerLayout.module.scss
+++ b/src/components/layout/headerLayout/headerLayout.module.scss
@@ -12,7 +12,13 @@
   max-width: 1440px;
   width: 100%;
   margin: 0 auto;
-  padding: 24px 0;
+  padding: 24px 20px;
+  box-sizing: border-box;
+  transition: all .3s ease-in-out;
+
+  @media (max-width: 1230px) {
+    padding: 20px 20px;
+  }
 }
 
 .navWrapper {
@@ -26,6 +32,10 @@
 .titleClass {
   &:hover {
     color: $gray;
+  }
+
+  @media (max-width: 1230px) {
+    font-size: 12px;
   }
 }
 
@@ -48,6 +58,22 @@
   padding: 20px 0;
   background-color: $violet;
   border-radius: 6px;
+  transition: all .3s ease-in-out;
+
+  &.button:hover {
+    background: $violet-dark;
+  }
+
+  @media (max-width: 1230px) {
+    max-width: 150px;
+    padding: 15px 0;
+  }
+}
+
+.titleButton {
+  @media (max-width: 1230px) {
+    font-size: 12px;
+  }
 }
 
 .dropdown {
