--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -12,12 +12,20 @@
     width: 30px;
     padding: 28px;
   }
+
+  @media (max-width: 1230px) {
+    padding: 20px;
+  }
 }
 
 .headerSidebar {
   @include flex(row, space-between, center);
   padding-bottom: 24px;
   border-bottom: 1px solid rgb(95,79,100, .3);
+
+  @media (max-width: 1230px) {
+    padding-bottom: 20px;
+  }
 }
 
 .button {
@@ -40,6 +48,10 @@
     opacity: 0;
     display: none;
   }
+
+  @media (max-width: 1230px) {
+    font-size: $s-font-size;
+  }
 }
 
 .icon {
@@ -49,11 +61,20 @@
   &:hover {
     color: $gray;
   }
+
+  @media (max-width: 1230px) {
+    @include size(26px, 26px);
+  }
 }
 
 .userHeader {
   @include flex(row, space-between, center);
   padding: 48px 0 36px;
+  transition: all .3s ease-in-out;
+
+  @media (max-width: 1230px) {
+    padding: 38px 0 26px;
+  }
 }
 
 .input {
@@ -65,6 +86,12 @@
   outline: 0;
   border: none;
   resize: none;
+  transition: all .3s ease-in-out;
+
+  @media (max-width: 1230px) {
+    width: 137px;
+    padding: 10px 14px;
+  }
 }
 
 .wrapperBadge {
@@ -73,6 +100,12 @@
   position: absolute;
   top: 4px;
   left: 17px;
+  transition: all .3s ease-in-out;
+
+  @media (max-width: 1230px) {
+    top: 2px;
+    left: 15px;;
+  }
 }
 
 .badge__title {
@@ -82,4 +115,9 @@
 .iconBadge {
   @include size(36px, 36px);
   color: $white;
+  transition: all .3s ease-in-out;
+
+  @media (max-width: 1230px) {
+    @include size(30px, 30px);
+  }
 }
